DAOs for NQueries and Disjunctions strategies